--- a/style/globals.css
+++ b/style/globals.css
@@ -11,7 +11,7 @@ body{
 }
 
 .emerald_sky_gradient{
-  @apply absolute top-0 left-0 w-full h-[90vh] md:h-[80vh] -z-50 bg-gradient-to-br from-emerald-400 dark:from-emerald-800 dark:to-sky-400 to-sky-800 filter blur-3xl opacity-70
+  @apply absolute top-0 left-0 w-full h-[90vh] md:h-[80vh] -z-50 bg-gradient-to-br from-emerald-400 dark:from-emerald-800 dark:to-sky-400 to-sky-800 filter blur-3xl opacity-50
 }
 
 .emereld_sky_gradient_text{
